################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v0.9.14 (XXX XX, 2005):
  CHG: The 'release' column of the pre-time table is now unique.
  FIX: Corrected the message shown on 'SITE NUKETOP' if there are no nukees.
  FIX: Corrected URL for the nxTools library package.

nxTools v0.9.13 (Sep 10, 2005):
  NEW: Moved to the modified BSD license.
  CHG: Removed bot specific output for SITE commands.
  CHG: Removed unused configuration options.
  FIX: Admins could not delete requests by other users.

nxTools v0.9.12 (Aug 29, 2005):
  NEW: Option to force requests to be proper release names (e.g. release.name-group).
  CHG: MP3 pre's are logged as PRE-MP3 instead of just PRE (needed for the sitebot).
  FIX: Forgot to remove the invite options from nxTools.cfg.
  FIX: The credits logged for SITE GIVE/TAKE should be in kilobytes when dZSbot support is disabled.

nxTools v0.9.11 (Aug 11, 2005):
  NEW: Added ::nx::sleep <ms> to nxHelper, to suspend execution for the given time.
  NEW: Request limits for individual users and groups.
  NEW: Rewrote argument parser, supports quoting arguments (e.g. SITE PRE freeware "Some Thing").
  CHG: Improved configuration file parser for invite and pre.
  CHG: Removed SITE BOT command, no longer needed.
  CHG: Removed SITE EDITINV, to make room for a new invite system.
  CHG: Renamed SITE CLEANLOGS to SITE CLEAN and SITE REBUILDLOGS to SITE REBUILD.
  CHG: Split the change log and upgrading instructions into separate files.
  CHG: Switched to a busy callback, instead of the timeout value, for failed
       SQLite transactions. This should improve the dupe checker during heavy traffic.
  CHG: Updated zlib in nxHelper to version 1.2.3.
  CHG: Users cannot fill their own requests.
  FIX: Corrected several errors in the readme.