@@ -115,6 +115,7 @@ unnuke      = TCL ..\scripts\nxTools\nxNuke.tcl UNNUKE
 unnukes     = TCL ..\scripts\nxTools\nxNuke.tcl UNNUKES
 editpre     = TCL ..\scripts\nxTools\nxPre.tcl EDIT
 pre         = TCL ..\scripts\nxTools\nxPre.tcl PRE
+reqbot      = TCL ..\scripts\nxTools\nxRequest.tcl BOT
 reqdel      = TCL ..\scripts\nxTools\nxRequest.tcl DEL
 reqfill     = TCL ..\scripts\nxTools\nxRequest.tcl FILL
 request     = TCL ..\scripts\nxTools\nxRequest.tcl ADD
@@ -162,6 +163,7 @@ open        = M1
 pre         = !A *
 pretime     = !A *
 rebuild     = M1
+reqbot      = M1
 reqdel      = !A *
 reqfill     = !A *
 request     = !A *
